-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.7.0 Beta1
-
None
-
-
c09219e94 (dev), 96d03949d (6.7)
We tried Qt 6.7.0-beta1 with our code and cannot link with MinGW anymore.
Same code works with any other system (including MSVC).
Qt 6.6.1 and 6.5.3 works without problems.
We have a simple call to default parameter in our code:
QNetworkRequest r; r.setTransferTimeout();
cmd.exe /C "cd . && C:\mingw32\x86_64-12.1.0-release-posix-seh-rt_v10-rev0\bin\c++.exe -Wall -Wextra -Wcast-qual -Wshadow -fno-exceptions -Wold-style-cast -Wcast-align=strict -Wpedantic -Wvla -Wlogical-op -Wmisleading-indentation -Wduplicated-cond -Wduplicated-branches -Wsuggest-override -Wnon-virtual-dtor -Wdate-time -Wunused -Wextra-semi -Wuseless-cast -Wconversion -Os -DNDEBUG -g -fno-rtti -Wl,--dynamicbase -Wl,--nxcompat -Wl,--high-entropy-va -mwindows @CMakeFiles\AusweisAppBinary.rsp -o src\AusweisApp.exe -Wl,--out-implib,src\libAusweisApp.dll.a -Wl,--major-image-version,0,--minor-image-version,0 && cd ." C:/mingw32/x86_64-12.1.0-release-posix-seh-rt_v10-rev0/bin/../lib/gcc/x86_64-w64-mingw32/12.1.0/../../../../x86_64-w64-mingw32/bin/ld.exe: src/network/libAusweisAppNetwork.a(NetworkManager.cpp.obj): in function `governikus::NetworkManager::prepareConnection(QNetworkRequest&) const': R:/J/src/network/NetworkManager.cpp:335: undefined reference to `impZN15QNetworkRequest22DefaultTransferTimeoutE'
Seems https://codereview.qt-project.org/c/qt/qtbase/+/515620 introduced it.
- relates to
-
QTBUG-118714 [QtNetwork] std::chrono support for transferTimeout values
-
- Closed
-
For Gerrit Dashboard: QTBUG-121135 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
531251,3 | QNetworkRequest: export the static constexpr (inline) member variables | dev | qt/qtbase | Status: MERGED | +2 | 0 |
531735,2 | QNetworkRequest: export the static constexpr (inline) member variables | 6.7 | qt/qtbase | Status: MERGED | +2 | 0 |